<resources>
    <string name="app_name">R2SNote_V2</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_priority">Priority</string>
    <string name="title_status">Status</string>
    <string name="title_note">Note</string>
    <string name="title_account">Account</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_change_pasword">Change Password</string>
    <string name="navigation_drawer_close">Close Navgation</string>
    <string name="navigation_drawer_open">Open Navgation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_logout">Log Out</string>

</resources>